# py_slop

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/py_slop/: __init__.py  cli.py
src/py_slop/checks/: __init__.py  boilerplate_docstring.py  except_log_continue.py  except_returns_default.py  narrator_comment.py  obvious_comment.py  query_in_loop.py  redundant_boolean_return.py  step_comment.py  useless_try_except.py
tests/checks/: test_boilerplate_docstring.py  test_except_log_continue.py  test_except_returns_default.py  test_narrator_comment.py  test_obvious_comment.py  test_query_in_loop.py  test_redundant_boolean_return.py  test_step_comment.py  test_useless_try_except.py
